css/resume.css
body {
  background: #FFFEF5;
  color: black;
}

main {
  background: unset;
}

footer {
  background: #b2af96;
}

.container-col {
  display: flex;
  flex-direction: column;
  flex: auto;
}

.navbar {
  background: #B2AF96;
  color: white;
}

.navbar a {
  color: black;
}

.dropdown ul {
  background: #b2af96;
}

.dropdown li:hover, .dropdown li:focus-within {
  background-color: #F3F0FF;
}

.content {
  grid-template-columns: auto 1fr;
  grid-column-gap: 2vh;
}

#category-tabs {
  margin: 0;
  font-size: 1.2em;
  list-style: none;
  padding: 0;
  font-family: Lato, sans-serif;
  color: rgba(0, 0, 0, .5);
}

#category-tabs li:hover {
  cursor: pointer;
  color: black;
}

#category-tabs .slide-active-selection {
  color: #000;
}

.slider {
  position: relative;
}

.slide {
  opacity: 0;
  visibility: collapse;
  animation: slide-dismiss 1s;
  /* Chrome does not treat visibility: collapse; properly for a flex item yet */
  position: absolute;
  top: 0;
}

.active-slide {
  animation: slide-appear 1s;
  animation-delay: 1s;
  animation-fill-mode: forwards;
}

@keyframes slide-dismiss {
  0% {
    margin-left: 0;
    opacity: 1;
    visibility: visible;
  }
  100% {
    margin-left: 10%;
    opacity: 0;
    visibility: collapse;
  }
}

@keyframes slide-appear {
  0% {
    opacity: 0;
    visibility: visible;
  }
  100% {
    opacity: 1;
    visibility: visible;
  }
}

